platform/components/common/kubeflow-core/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cache-server
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - cache-server
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: centraldashboard
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    - podSelector: {}
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - centraldashboard
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager-webhook
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 10250
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - webhook
    - key: app.kubernetes.io/component
      operator: In
      values:
      - webhook
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace-auth
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace-cert-manager
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace-istio-system
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace-knative-serving
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace-kubeflow-system
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-same-namespace-oauth2-proxy
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jobset-webhook
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      service.istio.io/canonical-name: jobset-controller-manager
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jupyter-web-app
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    - podSelector: {}
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - jupyter-web-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: katib-controller
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: katib.kubeflow.org/component
      operator: In
      values:
      - controller
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: katib-db-manager
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: app.kubernetes.io/part-of
          operator: In
          values:
          - kubeflow-profile
    - podSelector: {}
  podSelector:
    matchExpressions:
    - key: katib.kubeflow.org/component
      operator: In
      values:
      - db-manager
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: katib-ui
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
  podSelector:
    matchExpressions:
    - key: katib.kubeflow.org/component
      operator: In
      values:
      - ui
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kserve
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: control-plane
      operator: In
      values:
      - kserve-controller-manager
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kserve-models-web-app
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/component
      operator: In
      values:
      - kserve-models-web-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metadata-grpc-server
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: app.kubernetes.io/part-of
          operator: In
          values:
          - kubeflow-profile
    - podSelector: {}
  podSelector:
    matchExpressions:
    - key: component
      operator: In
      values:
      - metadata-grpc-server
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metatada-envoy
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    - podSelector: {}
  podSelector:
    matchExpressions:
    - key: component
      operator: In
      values:
      - metadata-envoy
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: app.kubernetes.io/part-of
          operator: In
          values:
          - kubeflow-profile
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    - podSelector: {}
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - minio
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ml-pipeline
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: app.kubernetes.io/part-of
          operator: In
          values:
          - kubeflow-profile
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - ml-pipeline
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ml-pipeline-ui
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - ml-pipeline-ui
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: model-catalog
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: app.kubernetes.io/part-of
          operator: In
          values:
          - kubeflow-profile
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: component
      operator: In
      values:
      - model-catalog-server
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: model-registry
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: app.kubernetes.io/part-of
          operator: In
          values:
          - kubeflow-profile
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: component
      operator: In
      values:
      - model-registry-server
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: model-registry-ui
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    - podSelector: {}
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - model-registry-ui
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: poddefaults
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 4443
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - poddefaults
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pvcviewer-webhook
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - pvcviewer
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: spark-operator-webhook
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - spark-operator
    - key: app.kubernetes.io/component
      operator: In
      values:
      - webhook
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tensorboards-web-app
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    ports:
    - port: 5000
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - tensorboards-web-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: trainer-webhook
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      service.istio.io/canonical-name: trainer
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: training-operator-webhook
  namespace: model-lifecycle
spec:
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: control-plane
      operator: In
      values:
      - kubeflow-training-operator
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: volumes-web-app
  namespace: model-lifecycle
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    - podSelector: {}
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - volumes-web-app
  policyTypes:
  - Ingress
